fix: fix light and dark mode ishhue.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,6 +3,7 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
+  --primary: #00ed43;
 }
 
 @theme inline {
